--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-torch==2.2.0
-torchvision==0.17.0
-torchaudio==2.2.0
+torch==2.5.1
+torchvision==0.20.1
+torchaudio==2.5.1  # install with CUDA 12.4 wheels when using RTX 50-series
 soundfile
-numpy==1.26.4
+numpy>=1.26.4,<2.2
 torch_audiomentations
 tqdm
 matplotlib
