--- a/src/configs/inference_test_clean.yaml
+++ b/src/configs/inference_test_clean.yaml
@@ -1,7 +1,7 @@
 defaults:
   - model: conformer
   - metrics: example
-  - datasets: example_eval
+  - datasets: librispeech_eval_test_clean
   - dataloader: example
   - transforms: example_only_instance
   - _self_
@@ -10,7 +10,7 @@ text_encoder:
 inferencer:
   device_tensors: ["spectrogram", "text_encoded"]
   device: auto
-  save_path: "example"
+  save_path: "librispeech/test-clean"
   seed: 1
   from_pretrained: "saved/testing/model_best.pth"
   beam_size: 10
