--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "asr"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 dependencies = [
     "black>=25.9.0",
     "comet-ml>=3.53.0",
@@ -11,16 +11,20 @@ dependencies = [
     "einops>=0.8.1",
     "hydra-core>=1.3.2",
     "isort>=6.0.1",
+    "loguru>=0.7.3",
     "matplotlib>=3.10.6",
     "numpy>=1.26.4,<2.2",
     "pandas>=2.3.2",
     "pre-commit>=4.3.0",
     "ruff>=0.13.3",
     "soundfile>=0.13.1",
-    "torch==2.5.1",
+    "torch==2.7.0+cu128; sys_platform != 'darwin'", # Only Linux/Windows get CUDA
+    "torch>=2.7.0; sys_platform == 'darwin' and platform_machine == 'arm64'", # Apple Silicon Macs
     "torch-audiomentations>=0.12.0",
-    "torchaudio==2.5.1",
-    "torchvision==0.20.1",
+    "torchaudio==2.7.0+cu128; sys_platform != 'darwin'", # Match available CUDA 12.8 builds
+    "torchaudio>=2.7.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
+    "torchvision==0.22.0+cu128; sys_platform != 'darwin'",
+    "torchvision>=0.22.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
     "tqdm>=4.67.1",
     "wandb>=0.22.0",
     "wget>=3.2",
@@ -31,9 +35,28 @@ dependencies = [
 package = true
 python-preference = "managed"
 
+[tool.uv.sources]
+torch = [
+    { index = "pytorch", marker = "sys_platform != 'darwin'" },
+    { index = "default", marker = "sys_platform == 'darwin'" }
+]
+torchvision = [
+    { index = "pytorch", marker = "sys_platform != 'darwin'" },
+    { index = "default", marker = "sys_platform == 'darwin'" }
+]
+torchaudio = [
+    { index = "pytorch", marker = "sys_platform != 'darwin'" },
+    { index = "default", marker = "sys_platform == 'darwin'" }
+]
+
 [[tool.uv.index]]
 name = "default"
 url = "https://pypi.org/simple"
+
+[[tool.uv.index]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/cu128"
+
 
 [tool.pytest.ini_options]
 log_cli = true
