--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "asr"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.13"
 dependencies = [
     "black>=25.9.0",
     "comet-ml>=3.53.0",
@@ -15,6 +15,7 @@ dependencies = [
     "matplotlib>=3.10.6",
     "numpy>=1.26.4,<2.2",
     "pandas>=2.3.2",
+    "pyctcdecode>=0.5.0",
     "pre-commit>=4.3.0",
     "ruff>=0.13.3",
     "soundfile>=0.13.1",
@@ -28,6 +29,7 @@ dependencies = [
     "tqdm>=4.67.1",
     "wandb>=0.22.0",
     "wget>=3.2",
+    "kenlm>=0.3.0",
 ]
 
 
