--- a/src/configs/datasets/librispeech_train.yaml
+++ b/src/configs/datasets/librispeech_train.yaml
@@ -4,9 +4,9 @@ train:
   instance_transforms: ${transforms.instance_transforms.train}
 val:
   _target_: src.datasets.LibrispeechDataset
-  part: "dev-clean"
+  part: "test-clean"
   instance_transforms: ${transforms.instance_transforms.inference}
 test:
   _target_: src.datasets.LibrispeechDataset
-  part: "test-clean"
+  part: "test-other"
   instance_transforms: ${transforms.instance_transforms.inference}
