--- a/src/configs/inference_test_other.yaml
+++ b/src/configs/inference_test_other.yaml
@@ -7,6 +7,8 @@ defaults:
   - _self_
 text_encoder:
   _target_: src.text_encoder.CTCTextEncoder
+  beam_size: 5
+  kenlm_model_path: null
 inferencer:
   device_tensors: ["spectrogram", "text_encoded"]
   device: auto
