--- a/src/configs/inference_custom.yaml
+++ b/src/configs/inference_custom.yaml
@@ -8,8 +8,10 @@ defaults:
 
 text_encoder:
   _target_: src.text_encoder.CTCTextEncoder
-  beam_size: 5
-  kenlm_model_path: null
+  beam_size: 10
+  kenlm_model_path: saved/3-gram.arpa
+  alpha: 1
+  beta: 0.5
 
 inferencer:
   device_tensors: ["spectrogram", "text_encoded"]
@@ -17,7 +19,6 @@ inferencer:
   save_path: "custom_dataset/preds"
   seed: 1
   from_pretrained: null
-  beam_size: 10
 
 custom_dataset:
   dataset_root: null
